--- a/style.css
+++ b/style.css
@@ -1,10 +1,40 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    width: 1366px;
+    height: 641px;
+}
+
+.menu{
+    display: flex;
+    justify-content: end;
 }
 
 ul{
     display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.text li a:hover{
+    text-decoration: underline;
+}
+
+.icone li .bolinhas:hover {
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #5f6368;
+}
+
+.icone li .pessoa:hover {
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px #5f6368;
 }
 
 ul img {
@@ -13,10 +43,100 @@ ul img {
 }
 
 li{
-    list-style: none;
+    list-style: none; 
 }
 
 a {
     text-decoration: none;
-    
+    color: #5f6368;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+.logo img {
+    width: 300px;
+}
+
+.barra_pesquisa {
+    display: flex;
+    margin: auto;
+    padding: 13px;
+    box-shadow: 0px 0px 4px #d3d3d3;
+    border-radius: 25px;
+    width: 400px;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.barra_pesquisa img {
+    width: 23px;
+    cursor: pointer;
+}
+
+.barra_pesquisa input {
+    border: none;
+    outline: 0;
+    width: 280px;
+    font-size: 15px;
+}
+
+.metodo_pesquisa {
+    text-decoration: none;
+    border: none;
+    background-color: #fff;
+}
+
+.adicionar_atalho {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    flex-direction: column;
+    cursor: pointer;
+    width: 120px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.adicionar_atalho:hover {
+    background-color: #d8d8d9;
+    border-radius: 7px;
+}
+
+.adicionar_atalho img{
+    width: 50px;
+    margin-top: 20px;
+}
+
+.adicionar_atalho h3 {
+    font-size: 15px;
+    margin-top: 20px;
+}
+
+.personalizar {
+    display: flex;
+    justify-content: end;
+}
+
+.personalizar button {
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 20px;
+    background-color: #d3e3fd;
+    box-shadow: 0px 0px 5px #d3d3d3;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.personalizar button:hover {
+    background-color: #bbc9df;
+}
+
+.personalizar img {
+    width: 17px;
+    margin-right: 8px;
 }
